updated the footer section

--- a/menjar/index.html
+++ b/menjar/index.html
@@ -1013,9 +1013,13 @@
     <footer>
       <div id="footer">
         <article class="bg footer text-white">
-          <div class="row">
-            <div class="col"></div>
-            <div class="col">
+          <div class="row footer_box">
+            <div class="col footer_section_main">
+              <div><img src="images/dinner.png" alt="Menjar Logo" /></div>
+              <h3>Menjar</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.imos libero distinctio.</p>
+            </div>
+            <div class="col footer_section_main">
               <h3>Navigation</h3>
               <div class="footer_section">
                 <div><a href="#home">Home</a></div>
@@ -1026,7 +1030,7 @@
               </div>
               
             </div>
-            <div class="col">
+            <div class="col footer_section_main">
               <h3>Follow Us</h3>
               <div class="footer_section">
                 <div><a href="">
