--- a/menjar/index.html
+++ b/menjar/index.html
@@ -24,6 +24,11 @@
     <!-- Link to the CSS file -->
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- LINK TO AOS LIBRY script -->
+    <link rel="stylesheet" href="../node_modules/aos/dist/aos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- LINK TO GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -61,10 +66,86 @@
 
 
         <div class="order">
-            <a href="signup.html"><button class="main_button_inverse" type="button" name="button">Sign Up</button></a>
+            <button class="main_button_inverse" type="button" name="button" data-toggle="modal" data-target="#sign_up_box">Sign Up</button>
 
-            <button class="main_button" type="button" name="button">Login</button>
+            <button class="main_button" type="button" name="button" data-toggle="modal" data-target="#log_in_box">Login</button>
             <!-- <button class="main_button" type="button">ONLINE ORDER</button> -->
+
+            <!-- Sign UP Modal -->
+            <div class="modal fade" id="sign_up_box" tabindex="-1" role="dialog" aria-labelledby="sign_up_boxTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body p-5">
+
+                            <div class="text-center mb-4">
+                                <h2>Sign Up</h2>
+
+                            </div>
+                            <form class="" action="index.html" method="post">
+                                <div class="form-floating mb-3">
+                                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                    <label for="floatingInput">Email address</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                    <label for="floatingPassword">Password</label>
+                                </div>
+                                <div class="form-floating mb-5">
+                                    <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
+                                    <label for="floatingPassword">Confirm Password</label>
+                                </div>
+
+                                <div class="text-center">
+                                    <button class="btn btn-danger btn-lg" type="submit" name="button">Sign Up</button>
+
+                                </div>
+                            </form>
+
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <div class="pt-2">
+                                <p>Already have an account? <a class="text-danger " data-toggle="modal" data-target="#log_in_box" href="#log_in_box">Log In</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Log In Modal -->
+            <div class="modal fade" id="log_in_box" tabindex="-1" role="dialog" aria-labelledby="log_in_boxTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body p-5">
+
+                            <div class="text-center mb-4">
+                                <h2>Log In</h2>
+
+                            </div>
+                            <form class="" action="index.html" method="post">
+                                <div class="form-floating mb-3">
+                                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                    <label for="floatingInput">Email address</label>
+                                </div>
+                                <div class="form-floating mb-5">
+                                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                    <label for="floatingPassword">Password</label>
+                                </div>
+
+                                <div class="text-center">
+                                    <button class="main_button" type="submit" name="button">Log In</button>
+
+                                </div>
+                            </form>
+
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <div class="pt-2">
+                                <p>You don't have an account? <a class="text-danger" href="#sign_up_box" data-toggle="modal" data-target="#sign_up_box">Sign Up</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <a href="#menu">
                 <i class="fa fa-cart-plus cart" aria-hidden="true"></i>
             </a>
@@ -88,11 +169,13 @@
                 <div class="hero_box row">
                     <div class="hero_box_item col-lg-8 col-sm-12">
                         <p><span><i class="fa fa-bullseye" aria-hidden="true"></i></span> Snails</p>
+                        <p><span><i class="fa fa-bullseye" aria-hidden="true"></i></span> Turkey</p>
                         <p><span><i class="fa fa-bullseye" aria-hidden="true"></i></span> Shrimps</p>
                         <p><span><i class="fa fa-bullseye" aria-hidden="true"></i></span> Dried Fish</p>
                     </div>
-                    <div class=" col-lg-4 col-sm-12">
-                        <h3><span>ONLY</span> $4,500</h3>
+                    <div class="hero_price col-lg-4 col-sm-12 justify-content-center">
+                        <h5 class="bg-white p-1 text-center">ONLY</h5>
+                        <h3> $4,500</h3>
                     </div>
                 </div>
             </article>
@@ -642,8 +725,11 @@
                     <button class="main_button" type="button">Order Online</button>
                 </div>
                 <div class="deilvery_img col-lg-4 col-md-12 col-sm-12">
-                    <img src="images/Pizza-delivery-illustration-transparent-PNG.png" alt="" class="delivery_img_main" />
+                    <div>
+                        <img src="images/Pizza-delivery-illustration-transparent-PNG.png" alt="" class="delivery_img_main" />
+                    </div>
                 </div>
+
                 <div class="reward col-lg-4 col-md-12 col-sm-12">
                     <h3 class="combo_sub">Reward</h3>
                     <h2 class="combo_heading">
@@ -922,7 +1008,10 @@
     </footer>
 
     <script src="js/app.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
