--- a/menjar/index.html
+++ b/menjar/index.html
@@ -36,11 +36,13 @@
 <body>
     <section class="nav_bg">
         <div class="nav bg">
-            <div class="header_nav">
-                <header class="">
+            <div>
+                <header class="header_logo">
                     <div><img src="images/dinner.png" alt="Menjar Logo" /></div>
                     <h3>Menjar</h3>
                 </header>
+            </div>
+            <div class="header_nav">
                 <nav id="navbar" class="navbar navbar-expand-lg">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
